# professional-python-exercises-3-API

./: .flake8  .gitignore  404.html  README.md  Taskfile.yaml  Taskfile.yml  github_cli.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_github_cli.py
.github/workflows/: python_linting.yml
coverage/: covindex.html  d_661c35190ec2bbf9___init___py.html  d_661c35190ec2bbf9_github_cli_py.html  d_661c35190ec2bbf9_test_github_cli_py.html  github_cli_py.html  index.html  status.json  test_github_cli_py.html
docs/: faq.md  quick_start.md  source_code.md
docs/templates/: sbom.md.jinja
faq/: index.html
professional_python_exercises_2_githubcli/: github_cli.py  test_github_cli.py
professional_python_exercises_2_githubcli/api/: github_api.py  repo_star_count.py  test_github_api.py  test_token.py  test_user_details.py  token.py  user_details.py
professional_python_exercises_2_githubcli/cli/: root.py  stars.py  test_user.py  user.py
professional_python_exercises_2_githubcli/common/: output.py  test_output.py
professional_python_exercises_3_api/api/: api.py  github_api.py  test_github_api.py  test_token.py  test_user_details.py  user_details.py
professional_python_exercises_3_api/cli/: api.py  root.py  stars.py  status.py  test_stars.py  test_status.py  test_user.py  user.py
professional_python_exercises_3_api/common/: output.py  test_output.py
quick_start/: index.html
sbom/: index.html
search/: search_index.json
source_code/: index.html
